--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,6 +49,6 @@
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
 	<key>GMSApiKey</key>
-	<string>YOUR_API_KEY</string>
+	<string>AIzaSyCgeU0KBG6NfID-qLcejN_JHUBHDs5n57w</string>
 
 </plist>
