--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^2.5.0
+  google_maps_flutter: ^2.7.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  flutter_polyline_points: ^1.0.0
-  location: ^4.4.0
-  flutter_svg: ^1.1.0
+ 
+  #cupertino_icons: ^1.0.6
+  #flutter_polyline_points: ^1.0.0
+  location: ^6.0.2
+  #flutter_svg: ^1.1.0
 
 dev_dependencies:
   flutter_test:
